{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "04d67471-3739-41dc-92d3-ab399483bd9f",
            "actions": [
                {
                    "name": "RestartScene",
                    "type": "Button",
                    "id": "a2188401-bf63-4a74-8f38-a215796e742c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightEye",
                    "type": "PassThrough",
                    "id": "d9ec8777-f434-4114-911c-751b84dde16e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftEye",
                    "type": "PassThrough",
                    "id": "a629acf8-b817-44b5-9d37-97efc7d3eb84",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00b6cf0a-55e9-411b-b597-58497877a5c1",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c84fb7d2-461a-4a20-bcaf-0e7f030a372a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftEye",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "450b3eab-6400-4f5d-ac4c-362574d16952",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightEye",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}